--- a/jquery/jquery-ui.theme.css
+++ b/jquery/jquery-ui.theme.css
@@ -8,15 +8,15 @@
  *
  * http://api.jqueryui.com/category/theming/
  *
- * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=5px&bgColorHeader=2191c0&bgTextureHeader=gloss_wave&bgImgOpacityHeader=75&borderColorHeader=4297d7&fcHeader=eaf5f7&iconColorHeader=d8e7f3&bgColorContent=fcfdfd&bgTextureContent=inset_hard&bgImgOpacityContent=100&borderColorContent=a6c9e2&fcContent=222222&iconColorContent=0078ae&bgColorDefault=0078ae&bgTextureDefault=glass&bgImgOpacityDefault=45&borderColorDefault=77d5f7&fcDefault=ffffff&iconColorDefault=e0fdff&bgColorHover=79c9ec&bgTextureHover=glass&bgImgOpacityHover=75&borderColorHover=448dae&fcHover=026890&iconColorHover=056b93&bgColorActive=6eac2c&bgTextureActive=gloss_wave&bgImgOpacityActive=50&borderColorActive=acdd4a&fcActive=ffffff&iconColorActive=f5e175&bgColorHighlight=f8da4e&bgTextureHighlight=glass&bgImgOpacityHighlight=55&borderColorHighlight=fcd113&fcHighlight=915608&iconColorHighlight=f7a50d&bgColorError=e14f1c&bgTextureError=gloss_wave&bgImgOpacityError=45&borderColorError=cd0a0a&fcError=ffffff&iconColorError=fcd113&bgColorOverlay=aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=75&opacityOverlay=30&bgColorShadow=999999&bgTextureShadow=flat&bgImgOpacityShadow=55&opacityShadow=45&thicknessShadow=0px&offsetTopShadow=5px&offsetLeftShadow=5px&cornerRadiusShadow=5px
+ * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Arial%2CHelvetica%2Csans-serif&fsDefault=1em&fwDefault=normal&cornerRadius=3px&bgColorHeader=%232d1616&bgTextureHeader=highlight_soft&borderColorHeader=%232d1616&fcHeader=%231C0E00&iconColorHeader=%23FFFFFF&bgColorContent=%232d1616&bgTextureContent=flat&borderColorContent=%232d1616&fcContent=%23FFFFFF&iconColorContent=%23FFFFFF&bgColorDefault=%23bd9476&bgTextureDefault=highlight_soft&borderColorDefault=%232d1616&fcDefault=%231C0E00&iconColorDefault=%23FFFFFF&bgColorHover=%23A87858&bgTextureHover=highlight_soft&borderColorHover=%232d1616&fcHover=%231C0E00&iconColorHover=%23555555&bgColorActive=%23f6dcc6&bgTextureActive=highlight_soft&borderColorActive=%232d1616&fcActive=%231C0E00&iconColorActive=%23FFFFFF&bgColorHighlight=%23F4DCCB&bgTextureHighlight=highlight_soft&borderColorHighlight=%232d1616&fcHighlight=%231C0E00&iconColorHighlight=%23FFFFFF&bgColorError=%23fddfdf&bgTextureError=flat&borderColorError=%23f1a899&fcError=%235f3f3f&iconColorError=%23cc0000&bgColorOverlay=%23aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%23666666&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=5px&offsetTopShadow=0px&offsetLeftShadow=0px&cornerRadiusShadow=8px&bgImgOpacityHeader=0&bgImgOpacityContent=0&bgImgOpacityDefault=75&bgImgOpacityHover=50&bgImgOpacityActive=75&bgImgOpacityHighlight=50&bgImgOpacityError=
  */
 
 
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Verdana,Arial,sans-serif;
-	font-size: 1.1em;
+	font-family: Arial,Helvetica,sans-serif;
+	font-size: 1em;
 }
 .ui-widget .ui-widget {
 	font-size: 1em;
@@ -25,25 +25,25 @@
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: Arial,Helvetica,sans-serif;
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #a6c9e2;
-	background: #fcfdfd url("images/ui-bg_inset-hard_100_fcfdfd_1x100.png") 50% bottom repeat-x;
-	color: #222222;
+	border: 1px solid #2d1616;
+	background: #2d1616;
+	color: #FFFFFF;
 }
 .ui-widget-content a {
-	color: #222222;
+	color: #FFFFFF;
 }
 .ui-widget-header {
-	border: 1px solid #4297d7;
-	background: #2191c0 url("images/ui-bg_gloss-wave_75_2191c0_500x100.png") 50% 50% repeat-x;
-	color: #eaf5f7;
+	border: 1px solid #2d1616;
+	background: #2d1616 url("images/ui-bg_highlight-soft_0_2d1616_1x100.png") 50% 50% repeat-x;
+	color: #1C0E00;
 	font-weight: bold;
 }
 .ui-widget-header a {
-	color: #eaf5f7;
+	color: #1C0E00;
 }
 
 /* Interaction states
@@ -51,15 +51,15 @@
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px solid #77d5f7;
-	background: #0078ae url("images/ui-bg_glass_45_0078ae_1x400.png") 50% 50% repeat-x;
+	border: 1px solid #2d1616;
+	background: #bd9476 url("images/ui-bg_highlight-soft_75_bd9476_1x100.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #ffffff;
+	color: #1C0E00;
 }
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited {
-	color: #ffffff;
+	color: #1C0E00;
 	text-decoration: none;
 }
 .ui-state-hover,
@@ -68,10 +68,10 @@
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
-	border: 1px solid #448dae;
-	background: #79c9ec url("images/ui-bg_glass_75_79c9ec_1x400.png") 50% 50% repeat-x;
+	border: 1px solid #2d1616;
+	background: #A87858 url("images/ui-bg_highlight-soft_50_A87858_1x100.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #026890;
+	color: #1C0E00;
 }
 .ui-state-hover a,
 .ui-state-hover a:hover,
@@ -81,21 +81,21 @@
 .ui-state-focus a:hover,
 .ui-state-focus a:link,
 .ui-state-focus a:visited {
-	color: #026890;
+	color: #1C0E00;
 	text-decoration: none;
 }
 .ui-state-active,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active {
-	border: 1px solid #acdd4a;
-	background: #6eac2c url("images/ui-bg_gloss-wave_50_6eac2c_500x100.png") 50% 50% repeat-x;
+	border: 1px solid #2d1616;
+	background: #f6dcc6 url("images/ui-bg_highlight-soft_75_f6dcc6_1x100.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #ffffff;
+	color: #1C0E00;
 }
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited {
-	color: #ffffff;
+	color: #1C0E00;
 	text-decoration: none;
 }
 
@@ -104,31 +104,31 @@
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
-	border: 1px solid #fcd113;
-	background: #f8da4e url("images/ui-bg_glass_55_f8da4e_1x400.png") 50% 50% repeat-x;
-	color: #915608;
+	border: 1px solid #2d1616;
+	background: #F4DCCB url("images/ui-bg_highlight-soft_50_F4DCCB_1x100.png") 50% top repeat-x;
+	color: #1C0E00;
 }
 .ui-state-highlight a,
 .ui-widget-content .ui-state-highlight a,
 .ui-widget-header .ui-state-highlight a {
-	color: #915608;
+	color: #1C0E00;
 }
 .ui-state-error,
 .ui-widget-content .ui-state-error,
 .ui-widget-header .ui-state-error {
-	border: 1px solid #cd0a0a;
-	background: #e14f1c url("images/ui-bg_gloss-wave_45_e14f1c_500x100.png") 50% top repeat-x;
-	color: #ffffff;
+	border: 1px solid #f1a899;
+	background: #fddfdf;
+	color: #5f3f3f;
 }
 .ui-state-error a,
 .ui-widget-content .ui-state-error a,
 .ui-widget-header .ui-state-error a {
-	color: #ffffff;
+	color: #5f3f3f;
 }
 .ui-state-error-text,
 .ui-widget-content .ui-state-error-text,
 .ui-widget-header .ui-state-error-text {
-	color: #ffffff;
+	color: #5f3f3f;
 }
 .ui-priority-primary,
 .ui-widget-content .ui-priority-primary,
@@ -163,27 +163,27 @@
 }
 .ui-icon,
 .ui-widget-content .ui-icon {
-	background-image: url("images/ui-icons_0078ae_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-widget-header .ui-icon {
-	background-image: url("images/ui-icons_d8e7f3_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-state-default .ui-icon {
-	background-image: url("images/ui-icons_e0fdff_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-state-hover .ui-icon,
 .ui-state-focus .ui-icon {
-	background-image: url("images/ui-icons_056b93_256x240.png");
+	background-image: url("images/ui-icons_555555_256x240.png");
 }
 .ui-state-active .ui-icon {
-	background-image: url("images/ui-icons_f5e175_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-state-highlight .ui-icon {
-	background-image: url("images/ui-icons_f7a50d_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-state-error .ui-icon,
 .ui-state-error-text .ui-icon {
-	background-image: url("images/ui-icons_fcd113_256x240.png");
+	background-image: url("images/ui-icons_cc0000_256x240.png");
 }
 
 /* positioning */
@@ -373,25 +373,25 @@
 .ui-corner-top,
 .ui-corner-left,
 .ui-corner-tl {
-	border-top-left-radius: 5px;
+	border-top-left-radius: 3px;
 }
 .ui-corner-all,
 .ui-corner-top,
 .ui-corner-right,
 .ui-corner-tr {
-	border-top-right-radius: 5px;
+	border-top-right-radius: 3px;
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-left,
 .ui-corner-bl {
-	border-bottom-left-radius: 5px;
+	border-bottom-left-radius: 3px;
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-right,
 .ui-corner-br {
-	border-bottom-right-radius: 5px;
+	border-bottom-right-radius: 3px;
 }
 
 /* Overlays */
@@ -401,10 +401,10 @@
 	filter: Alpha(Opacity=30); /* support: IE8 */
 }
 .ui-widget-shadow {
-	margin: 5px 0 0 5px;
-	padding: 0px;
-	background: #999999;
-	opacity: .45;
-	filter: Alpha(Opacity=45); /* support: IE8 */
-	border-radius: 5px;
+	margin: 0px 0 0 0px;
+	padding: 5px;
+	background: #666666;
+	opacity: .3;
+	filter: Alpha(Opacity=30); /* support: IE8 */
+	border-radius: 8px;
 }
