--- a/jquery/jquery-ui.css
+++ b/jquery/jquery-ui.css
@@ -845,7 +845,7 @@ body .ui-tooltip {
 }
 .ui-widget-content {
 	border: 1px solid #2d1616;
-	background: #2d1616;
+	background: #2d1616;  
 	color: #FFFFFF;
 }
 .ui-widget-content a {
@@ -853,7 +853,8 @@ body .ui-tooltip {
 }
 .ui-widget-header {
 	border: 1px solid #2d1616;
-	background: #2d1616 url("images/ui-bg_highlight-soft_0_2d1616_1x100.png") 50% 50% repeat-x;
+	background: #BD9476 url("images/ui-bg_highlight-soft_0_2d1616_1x100.png") 50% 50% repeat-x;
+	/* #2d1616 */
 	color: #1C0E00;
 	font-weight: bold;
 }
